--- a/Zleep/Zleep/Info.plist
+++ b/Zleep/Zleep/Info.plist
@@ -27,7 +27,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>EndScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Setup</string>
 	<key>UIRequiredDeviceCapabilities</key>
